fix: resolve static analyzer review issues for exceptions, NPEs, and messages